--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
   },
   "license": "MIT",
   "dependencies": {
-    "eonasdan-bootstrap-datetimepicker": "~4.14.30",
-    "moment-timezone": "~0.4.0"
+    "eonasdan-bootstrap-datetimepicker": "~4.15.35",
+    "koco": "^1.0.0",
+    "moment-timezone": "~0.5.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0"
   }
 }
