--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "eonasdan-bootstrap-datetimepicker": "~4.15.35",
-    "koco": "^1.0.0",
-    "moment-timezone": "~0.5.4"
+    "eonasdan-bootstrap-datetimepicker": "^4.14.30",
+    "knockout": "^3.4.0",
+    "moment": "^2.12.0",
+    "moment-timezone": "^0.5.4",
+    "jquery": "^2.1.4",
+    "bootstrap": "^3.3.6"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
